# fastapi_RAG

./: .gitignore  README.md  pyproject.toml
src/: .env.example  config.py  dependencies.py  dtos.py  main.py  pdf_processor.py  protocols.py  rag_service.py  routes.py  schemas.py  vector_store.py
